fix: enforce JDK 8 API compatibility in backend
Replace Java 10+ URLEncoder and Java 15 StringBuilder.isEmpty usage, add animal-sniffer on verify, and remove a duplicate import.

Co-authored-by: Cursor <cursoragent@cursor.com>